@@ -1,0 +1,8 @@
+package test.thread.issue2361;
+
+import org.testng.annotations.Test;
+
+@Test(singleThreaded = true)
+public class AnotherChildClassExample extends BaseTestClassExample {
+
+}
